<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TextAppearance.MaterialComponents.Headline1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_activity_margin"
        android:fontFamily="sans-serif"
        android:padding="@dimen/default_padding"
        android:text="@string/text_view"
        android:textColor="@color/black"
        android:textSize="@dimen/first_activity_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_textbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:hint="@string/name_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:hint="@string/email_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textbox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumber_textbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:hint="@string/phonenumber_hint_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textbox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/action_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/save_text_action"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_textbox"
        android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>